objects/CaseQueues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CaseQueueName__c</fullName>
        <label>CaseQueueName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <label>GroupId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <label>RecordTypeName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CaseQueues</label>
</CustomObject>